<div>브런치 개념을 잡아보자(to:dev)</div>
<div>브런치 개념을 잡아보자(to:dev)</div>

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   <div>test4</div>
   <div>test5</div>
   <div>브러치 dev에 올려보자</div>
+  <div>브런치 개념을 잡아보자</div>
+  <div>브런치 개념을 잡아보자(to:dev)</div>
  </body>
 </html>
