브런치 테스트(dev->main)
브런치 테스트(dev->main)

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <div>브러치 dev에 올려보자</div>
   <div>브런치 개념을 잡아보자</div>
   <div>브런치 개념을 잡아보자(to:dev)</div>
+  <div>브런치 개념을 잡아보자(dev->main)</div>
  </body>
 </html>
